Fixed horizontal scrolling issue.

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	color: #FFFFFF;
 	background-color: #013356;
+	overflow-x: hidden;
 }
 
 .italic {
